Changed to using grid

--- a/client-restaurant/src/App.css
+++ b/client-restaurant/src/App.css
@@ -1,67 +1,39 @@
 .container {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  /*align-items: stretch;*/
+  display: grid;
+  justify-content: start;
   background-color: ghostwhite;
   font: 20px Georgia, Serif;
-  overflow: hidden;
+  grid-template-columns: 1fr 4fr;
 }
 
 .sidebar-container {
-  flex: 1;
-  /*background-color: darkgreen;*/
-  display: flex;
-  flex-flow: column wrap;
+  display: grid;
+  grid-template-rows: 3fr 1fr;
 }
 
 
 .main-container {
-  display: flex;
-  flex: 3;
-  flex-flow: column wrap;
-  /*background-color: aqua;*/
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fill, 2em);
 }
-
-/*
-.title {
-  text-align: right;
-}
-*/
-
-/*
-.sidebar {
-  text-align: center;
-  background-color: olivedrab;
-  width: 300px;
-  flex-direction: column;
-}
-*/
 
 .menu {
-  display: flex;
-  flex-flow: column nowrap;
-  flex: 2;
   border-right: 5px solid black;
+  display: grid;
 }
 
 .restaurantInfo {
-  /*height: 150vw;*/
-  flex: 3;
-  /*background-color: aliceblue;*/
   border-right: 5px solid black;
   text-align: center;
 }
 
 .account {
-  /*height: 100vw;*/
-  /*background-color: bisque;*/
   cursor: pointer;
   text-align: center;
-  flex: 1;
   border: 1px solid black;
   border-right: hidden;
   transition: 0.5s;
@@ -73,8 +45,6 @@
 }
 
 .review {
-  flex: 1;
-  /*background-color: cadetblue;*/
   cursor: pointer;
   text-align: center;
   border: hidden;
@@ -86,14 +56,11 @@
   border: none;
 }
 .logout {
-  /*height: 100px;*/
-  /*background-color: coral;*/
-  /*align-self: flex-end;*/
   cursor: pointer;
   text-align: center;
   border: 1px solid black;
   border-right: hidden;
-  flex: 1;
+  transition: 0.5s;
 }
 .logout:hover {
   transform: scale(1.05);
@@ -102,48 +69,26 @@
 }
 
 .header-title {
-  flex: 1;
-  /*background-color: chocolate;*/
   border-bottom: 2px solid black;
-  font: 40px Lucinda console, Serif ;
-  text-align: center;
-  line-height: 65px;
 }
 
 .body-container {
-  display:flex;
-  flex: 9;
   padding: 50px;
-  flex-flow: column wrap;
+  grid-column: 1/5;
 }
 
 .reviews {
-  /*height: 100px;
-  width: 300px;*/
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-around;
-  align-items: stretch;
-  flex: 1;
-  /*background-color: darkgray;*/
   border: 1px solid black;
   text-align: center;
   overflow-x: hidden;
   overflow-y: auto;
+  height: 77vh;
+  display: grid;
+  grid-auto-rows: 5em;
 }
 
-/* .reviewList {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: space-around;
-  list-style: none;
-}*/
-
 .reviewItem {
-  justify-content: space-around;
-  padding: 30px;
-  /*background-color: coral;*/
-  border-style: solid hidden;
+  border-style: solid;
   border-color: black;
   border-width: 1px;
   transition: transform .5s;
@@ -158,14 +103,10 @@ img{
   border-radius: 50%;
   width: 200px;
   height: 200px;
-  /*float: left;*/
   padding: 10px;
 }
 
- /*@media all {
-  .
-}*/
- p{
+p{
    padding: 60px;
- }
+}
 
